--- a/mednik/mednik.csproj
+++ b/mednik/mednik.csproj
@@ -68,6 +68,7 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\jquery\LICENSE.txt" />
       <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
       <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\HSE\Index.cshtml" />
     </ItemGroup>
 
     <ItemGroup>
